--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/haptics": "1.1.3",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
+    "@ionic-enterprise/identity-vault": "~5.3.0",
     "@ionic/angular": "^5.5.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
