--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port=8100",
     "build": "ng build && cap sync",
     "test": "ng test",
     "lint": "ng lint",
@@ -26,6 +26,7 @@
     "@capacitor/ios": "3.3.3",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
+    "@ionic-enterprise/auth": "~3.9.2",
     "@ionic-enterprise/identity-vault": "~5.3.0",
     "@ionic/angular": "^5.5.2",
     "rxjs": "~6.6.0",
