--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@angular/platform-browser": "~13.1.1",
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/router": "~13.1.1",
-    "@capacitor/android": "3.3.3",
+    "@capacitor/android": "~3.3.4",
     "@capacitor/app": "1.0.7",
-    "@capacitor/core": "3.3.3",
+    "@capacitor/core": "~3.3.4",
     "@capacitor/haptics": "1.1.3",
-    "@capacitor/ios": "3.3.3",
+    "@capacitor/ios": "~3.3.4",
     "@capacitor/keyboard": "1.2.0",
     "@capacitor/status-bar": "1.0.6",
-    "@ionic-enterprise/identity-vault": "~5.3.0",
+    "@ionic-enterprise/identity-vault": "~5.4.0",
     "@ionic/angular": "~6.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -43,20 +43,20 @@
     "@angular/compiler": "~13.1.1",
     "@angular/compiler-cli": "~13.1.1",
     "@angular/language-service": "~13.1.1",
-    "@capacitor/cli": "3.3.3",
+    "@capacitor/cli": "~3.3.4",
     "@ionic/angular-toolkit": "~5.0.3",
     "@ionic/prettier-config": "~2.0.0",
     "@types/jasmine": "~3.10.2",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~17.0.2",
-    "@typescript-eslint/eslint-plugin": "~5.8.0",
-    "@typescript-eslint/parser": "~5.8.0",
-    "eslint": "~8.5.0",
+    "@typescript-eslint/eslint-plugin": "~5.9.0",
+    "@typescript-eslint/parser": "~5.9.0",
+    "eslint": "~8.6.0",
     "eslint-plugin-import": "~2.25.3",
-    "eslint-plugin-jsdoc": "~37.4.0",
+    "eslint-plugin-jsdoc": "~37.5.1",
     "eslint-plugin-prefer-arrow": "~1.2.3",
     "husky": "~7.0.4",
-    "jasmine-core": "~3.10.1",
+    "jasmine-core": "~4.0.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
